fixed layout issue on iPhone

--- a/zorronew/css/common-style.css
+++ b/zorronew/css/common-style.css
@@ -1172,7 +1172,7 @@ nav.card-big-logo{
     }
   }
 
-  @media only screen and (min-width:320px) and (max-width:768px){
+  @media only screen and (min-width:375px) and (max-width:812px){
     
     img{
       max-width: 100%;
@@ -1413,7 +1413,7 @@ nav.card-big-logo{
       display: inline-block;
     }
     .footer-container .social-row:nth-child(2){
-      width: 59%;
+      width: 58%;
       display: inline-block;
       text-align: right;
     }
@@ -1502,7 +1502,14 @@ nav.card-big-logo{
       padding-left: 15px;
     }
   }
-
+  @media only screen and (min-width:375px) and (max-width:667px){
+    .body-content {
+      padding: 12px 0px;
+      border-bottom: 1px solid #EDECEC;
+      height: 143px;
+      overflow-y: scroll;
+    }
+  }
   @media only screen and (min-width: 769px) and (max-width: 1024px)  {
     
 
